Добавлен файл базы данных, установлен json-server(глобально), произведен тестовый запрос к БД

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "name": "foodpetr",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "json-server": "^0.17.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
